axiom logo even spacing fix

--- a/viewer/src/components/styles/PartInfoPanel.scss
+++ b/viewer/src/components/styles/PartInfoPanel.scss
@@ -78,7 +78,7 @@
 #part_location {
   width: 100%;
   align-self: center;
-  margin-top: 3em;
+  margin-top: 2em;
   margin-bottom: 3em;
   background-color: #505050;
 }
